--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ p{
     background-color: crimson;
 }
 
+.col-right .cta:hover{
+    color: white !important;
+    background-color: crimson;
+}
+
 .brand{
     font-size: 3rem;
     text-transform: uppercase;
@@ -110,7 +115,7 @@ p{
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    max-width: 1300px;
+    max-width: 1650px;
     padding: 0 10px;
 }
 
@@ -232,7 +237,7 @@ p{
 
 /* Start hero section */
 #hero{
-    background-image: url(../img/others/bgPrincipal_jpeg.jpg);
+    background-image: url(../img/others/bgPrincipal_jpeg.png);
     background-size: cover;
     background-position: top center;
     position: relative;
@@ -247,7 +252,7 @@ p{
     height: 100%;
     width: 100%;
     background-color: black;
-    opacity: .5;
+    opacity: .2;
     z-index: -1;
 }
 
@@ -286,7 +291,7 @@ p{
     left: 0;
     height: 100%;
     width: 0%;
-    background-color: crimson;
+    background-color: transparent;
     animation: text_reveal_box 1s ease;
     animation-delay: .5s;
 }
@@ -319,7 +324,7 @@ p{
 }
 
 #services .service-top p{
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     margin-top: 5px;
     line-height: 2.5rem;
     font-weight: 300;
@@ -340,9 +345,9 @@ p{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 95px 70px 30px;
+    padding: 55px 70px 30px;
     border-radius: 10px;
-    background-image: url(../img/others/bgCard2.jpg);
+    background-image: url(../img/others/bgCards_Blur.png);
     background-size: cover;
     margin: 10px 5%;
     position: relative;
@@ -351,6 +356,7 @@ p{
 
 }
 
+
 #services .service-item::after{
     content: '';
     position: absolute;
@@ -358,7 +364,6 @@ p{
     top: 0;
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     border-radius: 10px;
     opacity: .5;
     z-index: -1;
@@ -379,7 +384,7 @@ p{
 
 #services .service-item p{
     color: white;
-    text-align: left;
+    text-align: center;
 }
 /* End Service Section */
 
@@ -396,6 +401,18 @@ p{
     margin-bottom: 50px;
 }
 
+#projects .project-info .project-link{
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #18171b;
+    color: white;
+    font-size: 1.2rem;
+    text-decoration: none;
+    margin-top: 20px;
+    transition: .3s ease;
+}
+
 #projects .all-projects{
     display: flex;
     align-items: center;
@@ -408,7 +425,7 @@ p{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 80%;
+    width: 70%;
     margin: 20px auto;
     overflow: hidden;
     border-radius: 10px;
@@ -423,13 +440,25 @@ p{
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    background-image: linear-gradient(60deg, #28272a 0%, #615c59 100%);
     color: white;
 }
 
 #projects .project-info h1{
     font-size: 4rem;
     font-weight: 500;
+}
+
+#projects .project-info .badge-icon-ionic{
+    width: 90px;
+    height: 30px;
+}
+
+#projects .project-info img {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
 }
 
 #projects .project-info h2{
@@ -443,31 +472,530 @@ p{
 }
 
 #projects .project-img{
-    flex-basis: 50%;
+    flex-basis: 100%;
     height: 300px;
     overflow: hidden;
     position: relative;
+    border-top-right-radius: 10px;
 }
 
-#projects .project-img:after{
-    content: '';
+#projects .slider {
+    margin: 0 auto;
+    width: 800px;
+    height: 400px;
+    overflow: hidden;
+}
+
+#projects .slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+#projects .slides input {
+    display: none;
+}
+
+#projects .slide {
+    width: 25%;
+    transition: 2s;
+    position: relative;
+}
+
+#projects .slide img{
+    width: 800px;
+}
+
+#projects .manual-navigation{
+    position: relative;
+    width: 800px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+}
+
+#projects .manual-btn-mobile{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+#projects .manual-btn-mobile-bd{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+
+#projects .manual-btn-web{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+#projects .manual-btn-web-mv{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+#projects .manual-btn-web-arbo{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+#projects .manual-btn-mobile:not(:last-child){
+    margin-right: 40px;
+}
+
+#projects .manual-btn-mobile:hover{
+    background-color: white;
+    color: #485563;
+}
+
+#projects .manual-btn-mobile-bd:not(:last-child){
+    margin-right: 40px;
+}
+
+#projects .manual-btn-mobile-bd:hover{
+    background-color: white;
+    color: #485563;
+}
+
+#projects .manual-btn-web:not(:last-child){
+    margin-right: 40px;
+}
+
+#projects .manual-btn-web:hover{
+    background-color: white;
+    color: #485563;
+}
+
+#projects .manual-btn-web-mv:not(:last-child){
+    margin-right: 40px;
+}
+
+#projects .manual-btn-web-mv:hover{
+    background-color: white;
+    color: #485563;
+}
+
+
+#projects .manual-btn-web-arbo:not(:last-child){
+    margin-right: 40px;
+}
+
+#projects .manual-btn-web-arbo:hover{
+    background-color: white;
+    color: #485563;
+}
+
+#projects #radioMobile1:checked ~ .first{
+    margin-left: 0;
+}
+
+#projects #radioMobile2:checked ~ .first{
+    margin-left: -25%;
+}
+
+#projects #radioMobile3:checked ~ .first{
+    margin-left: -50%;
+}
+
+#projects #radioMobile4:checked ~ .first{
+    margin-left: -75%;
+}
+
+#projects #radioMobile5:checked ~ .first{
+    margin-left: -100%;
+}
+
+#projects #radioMobile6:checked ~ .first{
+    margin-left: -125%;
+}
+
+#projects #radioMobile7:checked ~ .first{
+    margin-left: -150%;
+}
+
+#projects #radioMobile8:checked ~ .first{
+    margin-left: -175%;
+}
+
+#projects #radioMobileBD1:checked ~ .first{
+    margin-left: 0;
+}
+
+#projects #radioMobileBD2:checked ~ .first{
+    margin-left: -25%;
+}
+
+#projects #radioMobileBD3:checked ~ .first{
+    margin-left: -50%;
+}
+
+#projects #radioMobileBD4:checked ~ .first{
+    margin-left: -75%;
+}
+
+#projects #radioMobileBD5:checked ~ .first{
+    margin-left: -100%;
+}
+
+#projects #radioMobileBD6:checked ~ .first{
+    margin-left: -125%;
+}
+
+#projects #radioMobileBD7:checked ~ .first{
+    margin-left: -150%;
+}
+
+#projects #radioMobileBD8:checked ~ .first{
+    margin-left: -175%;
+}
+
+#projects #radioMobileBD9:checked ~ .first{
+    margin-left: -200%;
+}
+
+#projects #radioWebMV1:checked ~ .first{
+    margin-left: 0;
+}
+
+#projects #radioWebMV2:checked ~ .first{
+    margin-left: -25%;
+}
+
+#projects #radioWeb1:checked ~ .first{
+    margin-left: 0;
+}
+
+#projects #radioWeb2:checked ~ .first{
+    margin-left: -25%;
+}
+
+#projects #radioWeb3:checked ~ .first{
+    margin-left: -50%;
+}
+
+#projects #radioWeb4:checked ~ .first{
+    margin-left: -75%;
+}
+
+#projects #radioWeb5:checked ~ .first{
+    margin-left: -100%;
+}
+
+#projects #radioWeb6:checked ~ .first{
+    margin-left: -125%;
+}
+
+#projects #radioWebArbo1:checked ~ .first{
+    margin-left: 0;
+}
+
+#projects #radioWebArbo2:checked ~ .first{
+    margin-left: -25%;
+}
+
+#projects #radioWebArbo3:checked ~ .first{
+    margin-left: -50%;
+}
+
+#projects #radioWebArbo4:checked ~ .first{
+    margin-left: -75%;
+}
+
+#projects #radioWebArbo5:checked ~ .first{
+    margin-left: -100%;
+}
+
+
+#projects .navigation-auto div{
+    border: 2px solid crimson;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+#projects .navigation-auto{
     position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .4;
+    width: 800px;
+    margin-top: 360px;
+    display: flex;
+    justify-content: center;
 }
 
-#projects .project-img img{
-    transition: .3s ease transform;
+#projects .navigation-auto div:not(:last-child){
+    margin-right: 40px;
 }
 
-#projects .project-item:hover .project-img img{
-    transform: scale(1.1);
+#projects #radioMobile1:checked ~ .navigation-auto .auto-btn-mobile1{
+    background-color: crimson;
 }
+
+#projects #radioMobile2:checked ~ .navigation-auto .auto-btn-mobile2{
+    background-color: crimson;
+}
+
+#projects #radioMobile3:checked ~ .navigation-auto .auto-btn-mobile3{
+    background-color: crimson;
+}
+
+#projects #radioMobile4:checked ~ .navigation-auto .auto-btn-mobile4{
+    background-color: crimson;
+}
+
+#projects #radioMobile5:checked ~ .navigation-auto .auto-btn-mobile5{
+    background-color: crimson;
+}
+
+#projects #radioMobile6:checked ~ .navigation-auto .auto-btn-mobile6{
+    background-color: crimson;
+}
+
+#projects #radioMobile7:checked ~ .navigation-auto .auto-btn-mobile7{
+    background-color: crimson;
+}
+
+#projects #radioMobile8:checked ~ .navigation-auto .auto-btn-mobile8{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD1:checked ~ .navigation-auto .auto-btn-mobile-bd1{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD2:checked ~ .navigation-auto .auto-btn-mobile-bd2{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD3:checked ~ .navigation-auto .auto-btn-mobile-bd3{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD4:checked ~ .navigation-auto .auto-btn-mobile-bd4{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD5:checked ~ .navigation-auto .auto-btn-mobile-bd5{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD6:checked ~ .navigation-auto .auto-btn-mobile-bd6{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD7:checked ~ .navigation-auto .auto-btn-mobile-bd7{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD8:checked ~ .navigation-auto .auto-btn-mobile-bd8{
+    background-color: crimson;
+}
+
+#projects #radioMobileBD9:checked ~ .navigation-auto .auto-btn-mobile-bd8{
+    background-color: crimson;
+}
+
+#projects #radioWebMV1:checked ~ .navigation-auto .auto-btn-web-mv1{
+    background-color: crimson;
+}
+
+#projects #radioWebMV2:checked ~ .navigation-auto .auto-btn-web-mv2{
+    background-color: crimson;
+}
+
+#projects #radioWeb1:checked ~ .navigation-auto .auto-btn-web1{
+    background-color: crimson;
+}
+
+#projects #radioWeb2:checked ~ .navigation-auto .auto-btn-web2{
+    background-color: crimson;
+}
+
+#projects #radioWeb3:checked ~ .navigation-auto .auto-btn-web3{
+    background-color: crimson;
+}
+
+#projects #radioWeb4:checked ~ .navigation-auto .auto-btn-web4{
+    background-color: crimson;
+}
+
+#projects #radioWeb5:checked ~ .navigation-auto .auto-btn-web5{
+    background-color: crimson;
+}
+
+#projects #radioWeb6:checked ~ .navigation-auto .auto-btn-web6{
+    background-color: crimson;
+}
+
+#projects #radioWebArbo1:checked ~ .navigation-auto .auto-btn-web-arbo1{
+    background-color: crimson;
+}
+
+#projects #radioWebArbo2:checked ~ .navigation-auto .auto-btn-web-arbo2{
+    background-color: crimson;
+}
+
+#projects #radioWebArbo3:checked ~ .navigation-auto .auto-btn-web-arbo3{
+    background-color: crimson;
+}
+
+#projects #radioWebArbo4:checked ~ .navigation-auto .auto-btn-web-arbo4{
+    background-color: crimson;
+}
+
+#projects #radioWebArbo5:checked ~ .navigation-auto .auto-btn-web-arbo5{
+    background-color: crimson;
+}
+
 /* End Projects Section */
+
+/* Start Skills Section */
+
+#skills .skills{
+    flex-direction: column;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+
+#skills .skills-header h1{
+    margin-bottom: 10px;
+}
+
+#skills .all-skills {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+#skills .all-skills img {
+    margin-top: 50px;
+    height: 100px;
+    width: 100px;
+    margin-right: 30px;
+    animation: changeSkillColor 5s linear;
+
+}
+
+#skills .all-skills img:hover {
+    transform: rotateX(10deg) rotateY(10deg) scale(1.1);
+  }
+  
+
+#skills .all-skills .skill-react{
+    height: 100px;
+    width: 112px;
+    margin-right: 50px;
+}
+
+#skills .all-skills .skill-ionic{
+    height: 80px;
+    width: 240px;
+    margin-right: 50px;
+}
+/* End Skills Section */
+
+/* Start Feedbacks Section */
+
+#feedbacks .feedbacks{
+    flex-direction: column;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+
+#feedbacks .all-feedbacks {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#feedbacks .all-feedbacks .card {
+    margin: 20px;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    width: 400px;
+}
+
+#feedbacks .all-feedbacks .card .user-review {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+#feedbacks .all-feedbacks .card .user-review .user-name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#feedbacks .all-feedbacks .card .user-review img{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+#feedbacks .user-subinfo {
+    margin-bottom: 40px;
+}
+
+#feedbacks .user-subinfo a{
+    color: crimson;
+}
+
+#feedbacks .all-feedbacks .card .user-img img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+/* #feedbacks .all-feedbacks .card  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 800px;
+    height: 250px;
+    margin: 0 auto;
+    transform: scale(1.4);
+} */
+
+#feedbacks .all-feedbacks .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+/* End Feedbacks Section */
 
 /* Start About Me Section */
 
@@ -504,6 +1032,7 @@ p{
     margin-bottom: 30px;
     padding: 10px 20px;
     font-size: 2rem;
+    margin-right: 10px;
 }
 
 #about .col-left .about-img{
@@ -658,11 +1187,23 @@ p{
         font-weight: 500;
     }
 }
+
+@keyframes changeSkillColor {
+    0% {
+      filter: grayscale(1);
+    }
+    50% {
+      filter: grayscale(0.5);  
+    }
+    100% {
+      filter: grayscale(0);
+    }
+  }
 /* End Keyframes */
 
 /* Media Query for Tablet */
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 1200px){
     .cta{
         font-size: 2.5rem;
         padding: 20px 60px;
